<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="app_name" translatable="false">Diaspora</string>
    <string name="reload">Reload</string>
    <string name="new_notifications">Unread notification. Want to read it?</string>
    <string name="new_conversations">Unread conversation. Open it?</string>
    <string name="permissions_screenshot">You must grant \"Access Storage Permission\" to save screenshots. After that you should
        completely close the app or restart the phone. If you don\'t permit the storage access but want to use the
        screenshot function at a later time, you can grant the permission later. Please open then: systemsettings - apps -
        weather. In the permissions section you can grant the \"write storage permission\".</string>
    <string name="permissions_image">You must grant \"Access Storage Permission\" to save images. After that you should
        completely close the app or restart the phone. If you don\'t permit the storage access but want to save images
        at a later time, you can grant the permission later. Please open then: systemsettings - apps -
        weather. In the permissions section you can grant the \"write storage permission\".</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="permission_granted_try_again">Permission granted. Please try again.</string>
    <string name="title_notifications">D* Notifications</string>
    <string name="title_conversations">D* Conversations</string>
    <string name="title_stream">D* Stream</string>
    <string name="title_profil">D* Profil</string>
    <string name="title_aspects">D* Aspects</string>
    <string name="title_activities">D* Activities</string>
    <string name="title_liked">D* Liked</string>
    <string name="title_commented">D* Commented</string>
    <string name="title_mentions">D* Mentions</string>
    <string name="title_public">D* Public</string>
    <string name="title_activity_pods">Select Pod</string>
    <string name="filter_hint">Enter pod domain</string>
    <string name="confirm_url">Confirm pod url</string>
    <string name="podlist_source_note">Note: The podlist is populated by secure pods listed on https://podupti.me. You can enter in the edit field any pod not listed.</string>
    <string name="valid_pod">Please enter a valid domain name</string>
    <string name="podlist_error">Error: Could not retrieve list of pods!</string>
    <string name="no_internet">Sorry, you must be connected to the Internet to proceed</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_pod">Do you really want to use\nhttps://%1$s\nas your Diaspora Pod?</string>
    <string name="confirm_exit">Do you want to exit?</string>
    <string name="change_pod_warning">This will erase all cookies and session data. Do you really want to change pods?</string>
    <string name="new_post">D* New message</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Conversations</string>
    <string name="app_copyright" translatable="false">The community-run distributed social network</string>
    <string name="jb_menu_1">Settings</string>
    <string name="jb_help_license">About the app | Help</string>
    <string name="jb_stream">Stream</string>
    <string name="jb_liked">Liked</string>
    <string name="jb_commented">Commented</string>
    <string name="jb_contacts">Contacts</string>
    <string name="jb_mentions">Mentions</string>
    <string name="jb_activities">Activities</string>
    <string name="jb_followed_tags">Followed Hashtags</string>
    <string name="jb_manage_tags">Manage Hashtags</string>
    <string name="jb_settings">Personal settings</string>
    <string name="jb_aspects">Aspects</string>
    <string name="jb_pod">Change pod</string>
    <string name="jb_public">Public activities</string>
    <string name="jb_settings_view">App settings</string>
    <string name="jb_settings_diaspora">Pod settings</string>
    <string name="jb_share">Share content</string>
    <string name="settings_font">Change font size</string>
    <string name="settings_images_switch_on">Do load images</string>
    <string name="settings_images_switch_off">Do not load images</string>
    <string name="settings_view">Change view</string>
    <string name="settings_proxy">Proxy</string>
    <string name="proxy_enabled">Enabled</string>
    <string name="proxy_host">Host</string>
    <string name="proxy_port">Port</string>
    <string name="share_link">Share link as text</string>
    <string name="share_screenshot">Share screenshot of webpage</string>
    <string name="take_screenshot">Take screenshot of webpage</string>
    <string name="help_license">License</string>
    <string name="help_help">Markdown formating</string>
    <string name="help_about">Changelog</string>
    <string name="toast_screenshot">Saving screenshot as:</string>
    <string name="go_to_top">Go to top</string>
    <string name="search_by_tags_or_persons">Search by tags or persons</string>
    <string name="compose">New message</string>
    <string name="search_alert_title">Search</string>
    <string name="search_alert_tag">by tags</string>
    <string name="search_alert_people">by people</string>
    <string name="search_alert_bypeople_validate_needsomedata">Please add a name</string>
    <string name="markdown_text">&lt;i>"On diaspora* it's possible to format your text in status messages, comments
        and conversations using a simplified mark-up system called Markdown. This page gives an introduction to the
        codes used to create this formatting.&lt;/i>&lt;br> &lt;br>

        &lt;b>Heading&lt;/b>&lt;br>
        # This is an extremely large header&lt;br>
        ## Half as big as the one above&lt;br>
        ### Twice the size of normal text&lt;br> &lt;br>

        &lt;b>Italics and bold&lt;/b>&lt;br>
        Italics: *word* or _word_&lt;br>
        Bold: **word** or __word__&lt;br>
        Bold italics: ***word*** or ___word___&lt;br> &lt;br>

        &lt;b>Bulleted list&lt;/b>&lt;br>
        *, + or - in front of each line you want as part of the list or 1., 2., etc. in front of the list items&lt;br> &lt;br>

        &lt;b>Quotation&lt;/b>&lt;br>
        When you want to quote an extract of an article or another comment, you can conveniently format your text by starting the
        line or the paragraph by the > character&lt;br> &lt;br>

        &lt;b>Horizontal line&lt;/b>&lt;br>
        To create a horizontal line, use at least three - - -, _ _ _ or * * * on a separate line. Any number above three will do
        the same thing and spaces between the characters do not matter.&lt;br> &lt;br>

        &lt;b>Inline link&lt;/b>&lt;br>
        [displayed text here](http://link.address.here \"alt text\") The 'alt text' is optional, and is displayed as a tool-tip
        when the cursor is moved over the link.&lt;br> &lt;br>

        &lt;b>External images&lt;/b>&lt;br>
        ![Alt text](http://website.com/image.jpg \"optional title\") The alternative text in the square brackets is displayed if the image cannot be loaded, and the optional title is displayed as a tool-tip when the cursor is moved over the image; both are useful but not essential.&lt;br> &lt;br>

        &lt;b>Escape&lt;/b>&lt;br>
        If you want your message to include a character which is also used in Markdown coding, you can prevent it from being read by Markdown as a formatting code by 'escaping' it. To do this, place a backslash in front of the character. You can, however, type 'diaspora*' or 'D*' without the asterisk becoming a formatting code!&lt;br> &lt;br>

        &lt;b>Special characters&lt;/b>&lt;br>
        You can create the following symbols and other special characters using a combination of characters:&lt;br>
        (c) = © ; (r) = ® ; x^2 = x²"</string>
    <string name="about_text" translatable="false">
        &lt;i>For more informations visit the Projectsite on github:&lt;br>
        https://github.com/scoute-dich/Diaspora&lt;/i>&lt;br>&lt;br>

        &lt;b>v1.3.&lt;/b>&lt;br>
        &lt;i>big thanks to gsantner&lt;/i>&lt;br>

        &#8226; gitignore&lt;br>
        &#8226; Link to profile&lt;br>
        &#8226; Move menu actions&lt;br>
        &#8226; Refactoring part1&lt;br>
        &#8226; bump libs&lt;br>&lt;br>

        &lt;b>v1.2.&lt;/b>&lt;br>
        &#8226; using strings in podactivity&lt;br>
        &#8226; improved share activity&lt;br>&lt;br>

        &lt;b>v1.1.&lt;/b>&lt;br>
        &#8226; new about app and help dialogs&lt;br>
        &#8226; better snackbar integration&lt;br>&lt;br>

        &lt;b>v1.0.1.&lt;/b>&lt;br>
        &#8226; click on titelbar to load stream&lt;br>&lt;br>

        &lt;b>v1.0.&lt;/b>&lt;br>
        &#8226; all features of original Diaspora-Native-Webapp&lt;br>
        &#8226; popup menus (view settings, diaspora settings, share function)&lt;br>
        &#8226; share function (link, screenshot)&lt;br>
        &#8226; design improvements&lt;br>
        &#8226; implemented android marshmallow perimssion model&lt;br>
        &#8226; implemented swipe to refresh
    </string>
    <string name="license_title" translatable="false">Copyright © 2015–2016</string>
    <string name="license_text">&lt;b>Main Contributors:&lt;/b>&lt;br>

        &#8226; gsantner https://gsantner.github.io&lt;br>
        &#8226; martinchodev https://github.com/martinchodev&lt;br>
        &#8226; scoute-dich https://github.com/scoute-dich&lt;br> &lt;br>

        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.

        You should have received a copy of the GNU General Public License
        along with this program.  If not, see http://www.gnu.org/licenses.&lt;br> &lt;br>

        &lt;i>The splashscreen images can be found on flickr:
        https://www.flickr.com/photos/129581906@N06/sets/72157651933980136/with/16594947123.
        They were published by \"Lydia\" and are licensed under cc by-nc-sa.&lt;/i></string>
    <string name="splash_screen_description">Splash screen</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="huge">Huge</string>
    <string name="image">Unable to get image</string>
    <string name="jb_profile">Profile</string>
    <string name="exit_app">Exit app</string>
    <string name="toggle_desktop_page">Toggle mobile/desktop view</string>
    <string name="diaspora" translatable="false">Diaspora</string>
    <string name="shared_by_diaspora_android">*[shared by #DiasporaForAndroid]*</string>
    <string name="toast_link_address_copied">Link address copied …</string>
    <string name="context_menu_share_link">Share link address</string>
    <string name="context_menu_save_image">Save image</string>
    <string name="context_menu_share_image">Share image</string>
    <string name="context_menu_open_external_browser">Open in external browser …</string>
    <string name="context_menu_copy_link">Copy link address to clipboard</string>
    <string name="toast_saved_image_to_location">Saving image to</string>
    <string name="prefix_https" translatable="false">https://</string>
    <string name="share_dotdotdot">Share…</string>
    <string name="app_hashtag" translatable="false">#DiasporaForAndroid</string>
</resources>