<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/jb_stream"
            android:icon="@drawable/jb_stream"
            android:title="@string/jb_stream" />

        <item
            android:id="@+id/jb_followed_tags"
            android:icon="@drawable/jb_tag2"
            android:title="@string/jb_followed_tags" />

        <item
            android:id="@+id/jb_aspects"
            android:icon="@drawable/jb_aspects"
            android:title="@string/jb_aspects" />

        <item
            android:id="@+id/jb_activities"
            android:icon="@drawable/jb_activities"
            android:title="@string/jb_activities" />

        <item
            android:id="@+id/jb_liked"
            android:icon="@drawable/jb_heart"
            android:title="@string/jb_liked" />

        <item
            android:id="@+id/jb_commented"
            android:icon="@drawable/jb_commented"
            android:title="@string/jb_commented" />

        <item
            android:id="@+id/jb_mentions"
            android:icon="@drawable/jb_mentions"
            android:title="@string/jb_mentions" />

        <item
            android:id="@+id/jb_public"
            android:icon="@drawable/jb_aspects"
            android:title="@string/jb_public" />
    </group>

    <item android:title="@string/jb_menu_1">
        <menu>
            <item
                android:id="@+id/jb_settings_view"
                android:icon="@drawable/jb_settings"
                android:title="@string/jb_settings_view" />

            <item
                android:id="@+id/jb_settings_diaspora"
                android:icon="@drawable/jb_stream"
                android:title="@string/jb_settings_diaspora" />

            <item
                android:id="@+id/jb_license_help"
                android:icon="@drawable/jb_license"
                android:title="@string/jb_help_license" />
        </menu>
    </item>

</menu>
