<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_bell_outline_white_24dp"
        android:title="@string/notifications"
        app:showAsAction="always" />

    <item
        android:id="@+id/conversations"
        android:icon="@drawable/ic_message_text_outline_white_24dp"
        android:title="@string/messages"
        app:showAsAction="always" />

    <item
        android:id="@+id/help_license"
        android:title="@string/jb_help_license"
        app:showAsAction="never" />

    <item
        android:id="@+id/view"
        android:title="@string/jb_settings_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:title="@string/jb_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/exit_app"
        app:showAsAction="never" />

</menu>
