<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/podsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.dfa.diaspora_android.activity.PodsActivity">

    <ListView
        android:id="@+id/lstPods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navheader_description"
        android:layout_below="@+id/edtFilter"
        android:choiceMode="singleChoice" />

    <EditText
        android:id="@+id/edtFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/imgSelectPod"
        android:layout_toStartOf="@+id/imgSelectPod"
        android:hint="@string/filter_hint"
        android:inputType="textUri|textWebEditText" />

    <ImageView
        android:id="@+id/imgSelectPod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lstPods"
        android:layout_alignEnd="@+id/lstPods"
        android:layout_alignRight="@+id/lstPods"
        android:layout_alignTop="@+id/edtFilter"
        android:contentDescription="@string/confirm_url"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:src="@mipmap/ic_arrow_right_grey600_24dp" />

    <TextView
        android:id="@+id/navheader_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/podlist_source_note"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>

